--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Raia8</title>
+    <title>Raia 8</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,12 +16,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Project name</a>
+          <%= link_to 'Raia 8', root_path, class: 'brand' %>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="<%= 'active' if params[:controller] == 'home' %>">
+                <%= link_to 'Home', root_path %>
+              </li>
+              <li class="<%= 'active' if params[:controller] == 'students' %>">
+                <%= link_to 'Students', students_path %>
+              </li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
