--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@student) do |f| %>
+<%= simple_form_for(@student, html: {class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -10,6 +10,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= link_to 'Back', students_path, class: 'btn' %>
+    <%= f.button :submit, 'Save', class: 'btn btn-primary'%>
   </div>
 <% end %>
