--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing student</h1>
+<div class="page-header">
+  <h1><%= @student.name %></h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @student %> |
-<%= link_to 'Back', students_path %>
