--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -33,6 +33,10 @@
             <i class="icon-trash"></i>
           <% end %>
           
+          <%= link_to student_payments_path(student), class: 'btn btn-warning', alt: 'Payments', title: 'Payments' do %>
+            <i class="icon-money"></i>
+          <% end %>
+          
         </td>
       </tr>
     <% end %>
